<resources>
    <!--AndroidManifest.xml-->
    <string name="app_name">Quad-Core</string>

    <!--cust_drawer_menu.xml-->
    <string name="housekeeping">HouseKeeping</string>
    <string name="home">Home</string>
    <string name="facilities">Facilities</string>
    <string name="transaction_history">Transaction History</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!--cust_page_navigation.xml-->
    <string name="bookFaci">Book Facilities</string>
    <string name="bookHouseKeep">Book Housekeeping</string>
    <string name="fakeLogout">FAKE LOGOUT</string>

    <!--cust_app_bar_main.xml-->
    <string name="icon_cust_services">icon_cust_services</string>

    <!--hotelapp_firstpage.xml-->
    <string name="hotel_name">Quad-Core Hotel</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="backgroundImg1">backgroundImg1</string>
    <string name="backgroundImg2">backgroundImg2</string>

    <!--fragment_profile.xml-->
    <string name="user_name">User Name</string>

    <!--popout_getinfo.xml-->
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_password_again">Enter New Password Again</string>
    <string name="reset_phone_number">Reset Phone Number</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="confirm">Confirm</string>

    <string name="reset_name">Reset Name</string>


    <!--customer_fragment_housekeeping.xml-->
    <string name="services">Services</string>
    <string name="search_here">Search Here…</string>
    <string name="requested">Requested</string>

    <!--customer_fragment_home.xml-->
    <string name="homepage">Homepage</string>
    <string name="btnCreate">Create</string>
    <string name="btnGet">Get</string>

    <!--customer_fragment_home_item.xml-->
    <string name="des_book_room">We have many room type which single rooms to quad rooms, queen rooms, king rooms, and president suite.</string>
    <string name="banner_cust_home">banner_cust_home</string>

    <!--login.xml-->
    <string name="welcomeMsg">WELCOME <br />TO <br />QUAD CORE HOTEL!</string>
    <string name="forgetPassMsg">Forget Password</string>
    <string name="rememberMeMsg">Remember Me</string>
    <string name="btnLogin">LOGIN</string>
    <string name="back_icon">back_icon</string>
    <string name="password">Password</string>
    <string name="white_bg_3">white bg 3</string>
    <string name="email">Email</string>
    <string name="icon_eye_password">icon_eye_password</string>

    <!--forget_password.xml-->
    <string name="verification">Verification</string>
    <string name="msg_ask_reset_password">Please enter your email to proceed reset password.</string>
    <string name="send_email">Send Email</string>

    <!--register.xml-->
    <string name="txtCreateAcc">Create a new account to join us!</string>
    <string name="txtFillForm">Please fill up the form below.</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>

    <!--staff_fragment_report.xml-->
    <string name="txtReport">Report</string>

    <!--staff_fragment_trans_history.xml-->
    <string name="txtView">TextView</string>

    <!--language_menu.xml-->
    <string name="language_en">English</string>
    <string name="language_zh">Chinese</string>
    <string name="language_ja">Japanese</string>

    <!-- staff_fragment_home.xml -->
    <string name="today_check_in">Today\'s Check in</string>
    <string name="today_check_out">Today\'s Check Out</string>
    <string name="total_chkIn">0</string>
    <string name="total_chkOut">0</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="manage_housekeeper">Manage Housekeeper</string>
    <string name="manage_room">Manage Room</string>
    <string name="manage_facility">Manage Facility</string>
    <string name="manage_staff">Manage Staff</string>

    <!--user_report.xml-->
    <string name="total_number_of_staff">Total Number of Staff</string>
    <string name="num_of_staff">10</string>
    <string name="date_gen">20-4-2021</string>
    <string name="date_string">Date :</string>
    <string name="user_report">User Report</string>
    <string name="title">Title :</string>
    <string name="user_report_name">202104 User Report</string>
    <string name="total_num_cust">Total Number of Customer</string>
    <string name="num_of_cust">10</string>


    <!--    activity_latest_messages.xml-->
    <string name="chatWifUs">Chat With Us</string>
    <string name="chatWifStaff">Select Staff</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="book">Book</string>
    <string name="available">Available</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="ordered">Ordered</string>
    <string name="add">Add</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="edit">Edit</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="register_staff">Register Staff</string>
    <string name="enter_staff_name">Enter Staff Name</string>
    <string name="enter_staff_id">Enter Staff ID</string>
    <string name="manage_services_facilities">Manage Services/Facilities</string>
    <string name="manage_housekeeping">Manage Housekeeping</string>
    <string name="manage_check_in_out">Manage Check In/Out</string>
    <string name="permission"><u>Permission</u></string>
    <string name="room">Room</string>
    <string name="services_facilities">Services/Facilities</string>
    <string name="check_in_out">Check In/Out</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="manage">Manage</string>
    <string name="update_staff">Update Staff</string>


    <!-- Booking room -->
    <string name="manage_room_title">Manage Room</string>
    <string name="image_desc">Image</string>
    <string name="addRoom">Add New Room</string>
    <string name="todo">TODO</string>
    <string name="add_room_title">Add Room</string>

    <string name="book_room_qty_spinner">Selected Room Quantity</string>

    <string-array name="room_select_qty">
        <item>1 room</item>
        <item>2 rooms</item>
        <item>3 rooms</item>
        <item>4 rooms</item>
        <item>5 rooms</item>
        <item>6 rooms</item>
        <item>7 rooms</item>
        <item>8 rooms</item>
        <item>9 rooms</item>
        <item>10 rooms</item>
    </string-array>

    <string-array name="room_select_type">
        <item>Select Room Type</item>
        <item>Standard Single Room</item>
        <item>Standard Double Room</item>
        <item>Deluxe Double Room</item>
        <item>Standard Twin Room</item>
        <item>Superior Queen Room</item>
        <item>Family Room</item>
        <item>Deluxe Studio</item>
        <item>Triple Room</item>
    </string-array>


    <!--activity_cust_payment_method.xml-->
    <string name="onlineBanking">Online Banking</string>
    <string name="creditcard">Credit/Debit Card</string>
    <string name="ewallet">E Wallet</string>
    <string name="subtotal">Subtotal</string>
    <string name="totalAmount">Total Amount</string>
    <string name="selectPaymentMethod">Select Payment Method</string>

    <!--activity_cust_payment_online_banking.xml-->
    <string name="onlineBankingMsg">You will be redirected to selected bank website</string>
    <string name="pbeStr">Public Bank</string>
    <string name="maybankStr">Maybank</string>
    <string name="CIMBStr">CIMB Bank</string>
    <string name="otherBankStr">Other Bank</string>
    <string name="payNowStr">Pay Now</string>

    <!--activity_cust_payment__e_wallet.xml-->
    <string name="ewalletMsg">You will be redirected to selected E-Wallet website</string>
    <string name="tngStr">Touch N Go</string>
    <string name="grabpayStr">Grab Pay</string>
    <string name="boostStr">Boost</string>
    <string name="faveStr">Fave</string>

    <!--activity_cust_payment_credit_card.xml-->
    <string name="ConfirmPaymentStr">Confirm Payment</string>

    <!--activity_cust_payment_transaction_details.xml-->
    <string name="transactionDetailsStr">Transaction Details</string>
    <string name="purchasesuccesStr">Purchase Successful</string>
    <string name="purchasefailStr">Purchase Unsuccessful</string>
    <string name="amountStr">Amount</string>
    <string name="payMethodStr">Payment Method</string>
    <string name="doubleRoomStr">Double Room</string>

    <!--staff_fragment_trans_history.xml-->
    <string name="usernameStr">Username</string>

    <string name="room_detail">Room Detail</string>
    <string name="number_of_guest">Number of Guest</string>


    <string name="total_number_of_bed_textile_ordered">Total Number of Bed Textile Ordered</string>
    <string name="total_number_of_laundry_services_ordered">Total Number of Laundry Services Ordered</string>
    <string name="total_number_of_room_cleaning_ordered">Total Number of Room Cleaning Ordered</string>
    <string name="total_number_of_toiletries_ordered">Total Number of Toiletries Ordered</string>
    <string name="housekeeping_report">Housekeeping Report</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travel_date">Travel Date</string>
    <string name="your_trip">Your Trip</string>
    <string name="selected_room">Selected Room</string>
    <string name="reserve">Reserve</string>

</resources>