<?xml version="1.0" encoding="utf-8"?>
<!-- declared the staff menu item (item name and icon) -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home_staff"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/txtReport"/>
        <item android:id="@+id/nav_TransHis_staff"
            android:icon="@drawable/ic_transaction_history"
            android:title="@string/transaction_history"/>
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>