<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_item_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_outline_plus"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="10dp"
        app:shapeAppearanceOverlay="@style/Circular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_add_item_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item_name"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/iv_item_img"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_add_item_quantity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quantity"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/iv_item_img"
        app:layout_constraintTop_toBottomOf="@id/et_add_item_title"/>

    <Button
        android:id="@+id/btn_add_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:backgroundTint="@color/purple_500"
        android:alpha="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add_item"/>

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/red"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/iv_item_img"
        app:layout_constraintStart_toEndOf="@id/btn_add_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>