<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_edit_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        tools:text="Quantity: "
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_edit_item_quantity"/>

    <EditText
        android:id="@+id/et_edit_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="24sp"
        android:hint="@string/enter_quantity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_edit_item_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_item"/>

    <Button
        android:id="@+id/btn_edit_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:backgroundTint="@color/purple_500"
        android:alpha="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_item"/>

    <Button
        android:id="@+id/btn_edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/red"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_edit_item_quantity"
        app:layout_constraintStart_toEndOf="@id/btn_edit_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>