<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Staff.Staff_Fragments.staff_manager.Main.StaffManagerFragment">

    <EditText
        android:id="@+id/et_manager_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/teal_200"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:hint="@string/search_here"
        android:inputType="text"
        android:background="@drawable/custom_search_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="m"
        android:importantForAutofill="no" />

    <View
        android:id="@+id/ver_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/et_manager_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_staff_online"
        android:text="@string/online"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ver_line1"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/hor_line1"
        android:layout_width="1dp"
        android:layout_height="45dp"
        android:background="@color/gray"
        android:layout_marginStart="45dp"
        app:layout_constraintTop_toBottomOf="@id/ver_line1"
        app:layout_constraintStart_toEndOf="@id/tv_staff_online" />

    <TextView
        android:id="@+id/tv_staff_offline"
        android:text="@string/offline"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/ver_line1"
        app:layout_constraintStart_toEndOf="@id/hor_line1"/>

    <View
        android:id="@+id/ver_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/hor_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/framel_staff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ver_line2"
        app:layout_constraintBottom_toTopOf="@id/btn_register_staff"/>

    <Button
        android:id="@+id/btn_register_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_staff"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/purple_500"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>