<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Staff.Staff_Fragments.staff_checkInOut.Main.StaffCheckInOutMainFragment">

    <EditText
        android:id="@+id/et_check_in_out_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/teal_200"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:hint="@string/search_here"
        android:inputType="text"
        android:background="@drawable/custom_search_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="m"
        android:importantForAutofill="no"/>

    <View
        android:id="@+id/ver_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/et_check_in_out_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_check_in"
        android:text="@string/check_in"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ver_line1"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/hor_line1"
        android:layout_width="1dp"
        android:layout_height="45dp"
        android:background="@color/gray"
        android:layout_marginStart="45dp"
        app:layout_constraintTop_toBottomOf="@id/ver_line1"
        app:layout_constraintStart_toEndOf="@id/tv_check_in" />

    <TextView
        android:id="@+id/tv_check_out"
        android:text="@string/check_out"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/ver_line1"
        app:layout_constraintStart_toEndOf="@id/hor_line1"/>

    <View
        android:id="@+id/ver_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/hor_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ver_line2"/>

    <ImageView
        android:id="@+id/iv_selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_drop_down"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_selectedDate"
        app:layout_constraintTop_toBottomOf="@id/ver_line2"
        app:tint="@color/black"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/framel_check_in_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_selectedDate"/>

</androidx.constraintlayout.widget.ConstraintLayout>